--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,11 @@
 
 
 <section id="section-Reisen">
+    <% if (isMobile) { %>
+    <%- include("partials/reisen-mobile") %>
+    <% } else {%>
     <%- include("partials/reisen") %>
+    <% } %>
 </section>
 
 
