--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -91,6 +91,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 <script src="/js/reiseScript.js"></script>
 
+<!-- scripts required for reise Mobile section -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js'></script>
+<script src="/js/reiseMobileScript.js"></script>
+
 
 </body>
 
