--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
+    <!-- Slick carousel for Mobile Reise Sektion  -->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css'>
     <!-- aos library https://michalsnik.github.io/aos/ -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
@@ -19,6 +21,7 @@
     <link rel="stylesheet" href="/css/hero-styles.css">
     <link rel="stylesheet" href="/css/mitglieder-styles.css">
     <link rel="stylesheet" href="/css/reisen-styles.css">
+    <link rel="stylesheet" href="/css/reisen-mobile-styles.css">
     <link rel="stylesheet" href="/css/verein-styles.css">
 
 <body>
