--- a/views/partials/reisen-mobile.ejs
+++ b/views/partials/reisen-mobile.ejs
@@ -1,29 +1,19 @@
-  <section class="timeline-carousel">
-      <div class="timeline-carousel__item-wrapper" data-js="timeline-carousel">
-          <!--Timeline item-->
-          <div class="timeline-carousel__item">
-              <div class="timeline-carousel__content" style="background: url('images/Reisen/2017_Nizza/thumbnail.jpeg') center center; background-size:cover;">
-                      <h1>Unsere Reisen</h1>
-                  <span class="year">2017</span>
-                  <span class="month">Nizza - Frankreich</span>
-                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                      labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                  </p>
-                  <a href="#" class="read-more">Mehr dazu</a>
-              </div>
-          </div>
-          <!--/Timeline item-->
-                    <!--Timeline item-->
-          <div class="timeline-carousel__item">
-              <div class="timeline-carousel__content" style="background: url('images/Reisen/2018_Dublin/thumbnail.jpeg') center center; background-size:cover;">
-                      <h1>Unsere Reisen</h1>
-                  <span class="year">2017</span>
-                  <span class="month">Nizza - Frankreich</span>
-                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                      labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                  </p>
-                  <a href="#" class="read-more">Mehr dazu</a>
-              </div>
-          </div>
-          <!--/Timeline item-->
-  </section>
+<section id="section-Reisen-Mobile">
+    <!-- <h1 class="vereinsname">Unsere Reisen</h1> -->
+    <div class="timeline-carousel__item-wrapper" data-js="timeline-carousel">
+        <!--Timeline item-->
+        <% for (reise of reisen) { %>
+        <div class="timeline-carousel__item">
+            <div class="reise-content" style="background: url(<%=reise.thumbnail%>);">
+                <div class="reiseInfo">
+                    <span class="reiseDestination"><%= reise.city %> - <%= reise.country %></span>
+                    <span class="reiseJahr"><%= reise.year %></span>
+                </div>
+                <p class="reiseDescription">
+                    <%= reise.description%>
+                    <a href="#" class="reiseReadMore">Mehr dazu</a>
+                </p>
+            </div>
+        </div>
+        <% } %>
+</section>
