Zwischenstand Animation of Reise Sektion

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,7 @@
 	--primary-color: #FFED00;
 	--secondary-color: #D93BA1;
 	--complimentary-color: #0F6292;
-	--background-blue: #09486d;
+	--background-blue: rgb(9, 72, 109);
 }
 
 
