--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 <%- include("partials/reisen-mobile") %>
 <% } else {%>
 <section id="section-Reisen">
-    <%- include("partials/reisen") %>
+    <%- include("partials/reisen-mobile") %>
 </section>
 <% } %>
 
