--- a/public/css/reisen-mobile-styles.css
+++ b/public/css/reisen-mobile-styles.css
@@ -1,23 +1,42 @@
-.timeline-carousel__content:before{
-    content: ' ';
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-}
-
 .reise-content {
-    background-repeat: no-repeat;
-    background-size: cover !important;
-    background-position: center center !important;
     height: 60vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 10vw;
     padding-top: 5vw;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 60% center;
+    z-index: -10;
 }
+
+.reise-content:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 60% center;
+    background-image: url('/images/Reisen/2017_Nizza/thumbnail.jpeg');
+    z-index: -1;
+    -webkit-transition: all 1s cubic-bezier(0.7, 0, 0.3, 1);
+    transition: all 1s cubic-bezier(0.7, 0, 0.3, 1);
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+.slick-active .reise-content:before {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    -webkit-animation: cssAnimation 8s 1 ease-in-out forwards;
+    animation: cssAnimation 8s 1 ease-in-out forwards;
+}
+.reise-content div {
+    padding: 0vw 10vw;
+}
+
 .reiseInfo {
     display: flex;
     flex-direction: column;
@@ -32,7 +51,7 @@
     font-size: calc(1rem + 0.5vw);
     margin: 0;
     color: transparent;
-    background: linear-gradient(270deg, var(--secondary-color), var(--complimentary-color));
+    background: linear-gradient(270deg, var(--complimentary-color), var(--secondary-color));
     background-clip: text;
     -webkit-background-clip: text;
     opacity: 1;
@@ -52,4 +71,38 @@
 	text-shadow: 4px 4px 6px rgba(15, 98, 146, 0.65);
 	font-size: calc(1rem + 3.5vw);
     font-weight: 800;
+}
+
+.reiseDescriptionWrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    position: relative;
+    height: 30vh;
+    padding-bottom: 10vw !important;
+    z-index: 1;
+    opacity: 1;
+    background: linear-gradient(190deg,
+            rgba(26, 155, 230, 0) 30%,
+            rgb(237, 228, 91, 0.5) 65%,
+            rgb(9, 72, 109, 0.8) 97%
+            );
+    mask: linear-gradient(transparent, black 60%);
+}
+
+@keyframes cssAnimation {
+  from {
+    -webkit-transform: scale(1) translate(0px);
+  }
+  to {
+    -webkit-transform: scale(1.2) translate(0px);
+  }
+}
+@-webkit-keyframes cssAnimation {
+  from {
+    -webkit-transform: scale(1) translate(0px);
+  }
+  to {
+    -webkit-transform: scale(1.2) translate(0px);
+  }
 }
