--- a/views/partials/reisen-mobile.ejs
+++ b/views/partials/reisen-mobile.ejs
@@ -4,8 +4,9 @@
         <!--Timeline item-->
         <% for (reise of reisen) { %>
         <div class="timeline-carousel__item">
-            <div class="reise-content" style="background-image: url(<%=reise.thumbnail%>);">
-            <!-- <div class="reise-content"> -->
+            <div class="reise-content">
+                <div class="reiseImage" style="background-image: url(<%=reise.thumbnail%>);">
+                </div>
                 <div class="reiseInfo">
                     <span class="reiseDestination"><%= reise.city %> - <%= reise.country %></span>
                     <span class="reiseJahr"><%= reise.year %></span>
