--- a/public/css/reisen-mobile-styles.css
+++ b/public/css/reisen-mobile-styles.css
@@ -27,14 +27,12 @@
 
 .reiseImage {
     position: absolute; 
-    height: 60vh;
-    width: 100vh;
+    height: 100%;
+    width: 100%;
     z-index: -1;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position-x: 55%;
-    background-position-y: 45%;
-    left: -48vw;
+    background-position: 60% center;
     opacity: 1;
     transform: scale(1.2);
     overflow: hidden;
@@ -58,7 +56,8 @@
 .reiseReadMore {
     float: right;
     color: var(--primary-color);
-    padding-right: 2vw;
+    padding: 1vw;
+    padding-right: 5vw;
 }
 
 .reiseDescription {
@@ -72,7 +71,6 @@
     font-weight: 600;
     z-index: 1;
     padding: 4vw;
-    padding-bottom: 7vw;
 }
 
 .reiseJahr {
