--- a/views/partials/reisen-mobile.ejs
+++ b/views/partials/reisen-mobile.ejs
@@ -13,8 +13,9 @@
                 </div>
                 <div class="reiseDescriptionWrapper">
                     <p class="reiseDescription">
-                        <%= reise.description%>
-                        <a href="#" class="reiseReadMore">Mehr dazu</a>
+                        <!-- <%= reise.description%> -->
+                        Mehr dazu
+                        <!-- <a href="#" class="reiseReadMore">Mehr dazu</a> -->
                     </p>
                 </div>
             </div>
